# software-backend

./: .air.toml  .env  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  go.mod  go.sum  package-lock.json  wait-for-db.sh
.github/workflows/: backend.yml
cmd/server/: main.go
internal/api/: routes.go  whatsapp_handler.go
internal/api/handlers/: appointment_handler.go  auth_handler.go  business_hours_handler.go  (+6 more)
internal/database/: connection.go
internal/middleware/: auth.go
internal/mocks/: mock_appointment_repository.go  mock_business_hours_repository.go  mock_consultation_repository.go  mock_exam_repository.go  mock_patient_repository.go  mock_user_repository.go
internal/models/: appointment.go  bussiness_hours.go  consultation.go  diagnostic.go  exam.go  patient.go  questionnaire.go  user.go  whatsapp_config.go
internal/repository/: appointment_repository.go  business_hour_repository.go  consultation_repository.go  exam_repository.go  patient_repository.go  user_repository.go  whatsapp_repository.go
internal/scheduler/: reminder_scheduler.go
internal/service/: appointment_service.go  auth_service.go  business_hours_service.go  consultation_service.go  exam_service.go  patient_service.go  user_service.go  whatsapp_service.go  whatsapp_service_simple.go
internal/whatsapp/: client.go
scripts/: install-k6.sh  run-k6.sh  zap-baseline.sh
src/: main.rs
src/ctx/: mod.rs
src/model/: mod.rs
src/web/: mod.rs
tests/k6/: README.md  helpers.js  load-test.js  security-probes.js  smoke-test.js  stress-test.js  summary.js
tmp/: main
(+35 files in other folders)
