[package]
name = "software-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] } 
jsonwebtoken = "9.0.2"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15"
bcrypt = "0.17"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }


